apps/meditation-player/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meditation-player
  namespace: meditation-player
  labels:
    app: meditation-player
spec:
  selector:
    app: meditation-player
  ports:
    - name: http
      port: 80
      targetPort: http
